--- a/app/views/orderviews/_form.html.haml
+++ b/app/views/orderviews/_form.html.haml
@@ -1,16 +1,21 @@
 = form_for @order do |f|
   - if @order.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@order.errors.count, "error")} prohibited this order from being saved:"
-      %ul
-        - @order.errors.full_messages.each do |message|
-          %li= message
+    .card.mx-4
+      .card-body
+        %div{style: 'color: red'}
+          %h2
+            =t('application.can_not_be_saved')#Falta traduccion
+          %ul
+            - @order.errors.each do |error|
+              %li= error.full_message
 
-  .field
-    = f.label :order_time
-    = f.time_field :order_time
-  .field
-    = f.label :order_date
-    = f.date_field :order_date
-  .actions
-    = f.submit 'Save'
+  .form-group.mx-4
+    = f.label :order_state, class: "form-label required"
+    .div.w-25 
+      = f.select(:order_state, options_for_select(order_states_helper, @order.order_state), {prompt: 'select'}, class: "form-control")
+
+  .row.mt-4
+    .offset-3.col-3
+      = link_to 'back', orderviews_path, class: "btn btn-secondary btn-block"
+    .col-3
+      = button_tag 'save', class: "btn btn-outline-success btn-block"
