--- a/app/views/orderviews/index.html.haml
+++ b/app/views/orderviews/index.html.haml
@@ -1,23 +1,48 @@
 %h1 Listing orders
 
-%table
+%h2 Search
+= form_tag orderviews_path, method: :get do
+  .form-group
+    = label_tag :client_name, 'Client Name'
+    = text_field_tag :client_name, params[:client_name], class: 'form-control'
+
+  .form-group
+    = label_tag :order_state, 'Order State'
+    = select_tag :order_state, options_for_select(Order.order_states.keys.map { |key| [key.humanize, key] }, params[:order_state]), include_blank: true, class: 'form-control'
+  .form-group
+    = label_tag :start_date, 'Start Date'
+    = date_field_tag :start_date, params[:start_date], class: 'form-control'
+
+  .form-group
+    = label_tag :end_date, 'End Date'
+    = date_field_tag :end_date, params[:end_date], class: 'form-control'
+
+  .form-group
+    = label_tag :order_time, 'Order Time'
+    = time_field_tag :order_time, params[:order_time], class: 'form-control'
+
+  .form-group
+    = submit_tag 'Search', class: 'btn btn-primary'
+
+%table.table.table-striped
   %thead
     %tr
+      %th Client
       %th Order time
       %th Order date
+      %th Order State
       %th
-      %th
+      %th Actions
       %th
 
   %tbody
     - @orders.each do |order|
       %tr
+        %td= order.client.full_name
         %td= order.order_time
         %td= order.order_date
-        %td= link_to 'Show', order
-        %td= link_to 'Edit', edit_order_path(order)
-        %td= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' }
+        %td= order.order_state
+        %td= link_to 'Show', orderview_path(order), class: 'btn btn-primary'
+        %td= link_to 'Modify Order State', edit_orderview_path(order), class: 'btn btn-danger'
 
 %br
-
-= link_to 'New Order', new_order_path
