--- a/app/views/stateviews/_form.html.haml
+++ b/app/views/stateviews/_form.html.haml
@@ -12,17 +12,17 @@
   .form-group.mx-4
     = f.label :ontime, class: "form-label required"
     .div.w-25 
-      = f.text_field :ontime, autofocus: true, class: "form-control"
+      = f.number_field :ontime, step: 1, autofocus: true, class: "form-control"
   
   .form-group.mx-4
     = f.label :overtime, class: "form-label required"
     .div.w-25 
-      = f.text_field :overtime, autofocus: true, class: "form-control"
+      = f.number_field :overtime, step: 1, autofocus: true, class: "form-control"
   
   .form-group.mx-4
     = f.label :late, class: "form-label required"
     .div.w-25 
-      = f.text_field :late, autofocus: true, class: "form-control"
+      = f.number_field :late, step: 1, autofocus: true, class: "form-control"
 
   .row.mt-4
     .offset-3.col-3
