--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,6 +53,14 @@
                 </a>
             </li>
 
+            <!-- Nav Item - Chefs -->
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="<%= adminviews_path %>" >
+                    <i class="fas fa-fw fa-cog"></i><!-- Cambiar la imagen -->
+                    <span>Administradores</span>
+                </a>
+            </li>
+
             <!-- Nav Item - Orders -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="<%= orderviews_path %>" >
