--- a/app/views/dishviews/index.html.haml
+++ b/app/views/dishviews/index.html.haml
@@ -14,9 +14,9 @@
       %th Description
       %th Price
       %th Dish state
-      %th Show
-      %th Edit
-      %th Delete
+      %th 
+      %th Actions
+      %th 
 
   %tbody
     - @dishes.each do |dish|
