--- a/app/views/adminviews/_form.html.haml
+++ b/app/views/adminviews/_form.html.haml
@@ -8,7 +8,12 @@
           %ul
             - @admin.errors.each do |error|
               %li= error.full_message
-    
+
+  .form-group.mx-4
+    = f.label :full_name, class: "form-label required"
+    .div.w-25 
+      = f.text_field :full_name, autofocus: true, class: "form-control"
+
   .form-group.mx-4
     = f.label :email, class: "form-label required"
     .div.w-25 
