--- a/app/views/dishviews/_form.html.haml
+++ b/app/views/dishviews/_form.html.haml
@@ -25,9 +25,9 @@
       = f.text_field :price, autofocus: true, class: "form-control"
 
   .form-group.mx-4
-    = f.label :dish_image, class: "form-label required"
+    = f.label :image, class: "form-label required"
     .div.w-25 
-      = f.file_field :dish_image, accept: 'image/*'
+      = f.file_field :image, accept: 'image/*'
 
   .form-group.mx-4
     = f.label :dish_state, class: "form-label required"
