--- a/app/views/adminviews/_formEdit.html.haml
+++ b/app/views/adminviews/_formEdit.html.haml
@@ -12,22 +12,22 @@
   .form-group.mx-4
     = f.label :full_name, class: "form-label required"
     .div.w-25 
-      = f.text_field :full_name, autofocus: true, class: "form-control"
+      = f.text_field :full_name, autofocus: true, class: "form-control", required: true
         
   .form-group.mx-4
     = f.label :email, class: "form-label required"
     .div.w-25 
-      = f.email_field :email, autofocus: true, class: "form-control"
+      = f.email_field :email, autofocus: true, class: "form-control", required: true
 
   .form-group.mx-4
     = f.label :password, class: "form-label required"
     .div.w-25 
-      = f.password_field :password, autofocus: true, class: "form-control"
+      = f.password_field :password, autofocus: true, class: "form-control", required: true
 
   .form-group.mx-4
     = f.label :password_confirmation, class: "form-label required"
     .div.w-25 
-      = f.password_field :password_confirmation, autofocus: true, class: "form-control"
+      = f.password_field :password_confirmation, autofocus: true, class: "form-control", required: true
 
   .row.mt-4
     .offset-3.col-3
