--- a/app/views/dishviews/_form.html.haml
+++ b/app/views/dishviews/_form.html.haml
@@ -12,27 +12,27 @@
   .form-group.mx-4
     = f.label :dish_name, class: "form-label required"
     .div.w-25 
-      = f.text_field :dish_name, autofocus: true, class: "form-control"
+      = f.text_field :dish_name, autofocus: true, class: "form-control", required: true
   
   .form-group.mx-4
     = f.label :description, class: "form-label required"
     .div.w-25 
-      = f.text_field :description, autofocus: true, class: "form-control"
+      = f.text_field :description, autofocus: true, class: "form-control", required: true
 
   .form-group.mx-4
     = f.label :price, class: "form-label required"
     .div.w-25 
-      = f.text_field :price, autofocus: true, class: "form-control"
+      = f.text_field :price, autofocus: true, class: "form-control", required: true
 
   .form-group.mx-4
     = f.label :image, class: "form-label required"
     .div.w-25 
-      = f.file_field :image, accept: 'image/*'
+      = f.file_field :image, accept: 'image/*', required: true
 
   .form-group.mx-4
     = f.label :dish_state, class: "form-label required"
     .div.w-25 
-      = f.select(:dish_state, options_for_select(dish_states_helper, @dish.dish_state), {prompt: 'select'}, class: "form-control")
+      = f.select(:dish_state, options_for_select(dish_states_helper, @dish.dish_state), {prompt: 'select'}, class: "form-control", required: true)
 
   .row.mt-4
     .offset-3.col-3
