--- a/app/views/layouts/devise/registrations.html.erb
+++ b/app/views/layouts/devise/registrations.html.erb
@@ -17,11 +17,11 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-                <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fas fa-laugh-wink"></i>
+            <a class="sidebar-brand d-flex align-items-center justify-content-center">
+                <div class="sidebar-brand-icon">
+                    <i class="fas fa-id-card"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">Sign Up Modulo Administración</div>
+                <div class="sidebar-brand-text mx-2" style="font-size: larger; margin-top: 10px;">Sign Up Management Module</div>
             </a>
 
         </ul>
