--- a/app/views/orderviews/index.html.haml
+++ b/app/views/orderviews/index.html.haml
@@ -2,23 +2,29 @@
 
 %h2 Search
 = form_tag orderviews_path, method: :get do
-  .form-group
-    = label_tag :client_name, 'Client Name'
-    = text_field_tag :client_name, params[:client_name], class: 'form-control'
+  .form-group.row
+    = label_tag :client_name, 'Client Name', class: 'col-md-2 col-form-label'
+    .col-md-8
+      = text_field_tag :client_name, params[:client_name], class: 'form-control'
 
-  .form-group
-    = label_tag :order_state, 'Order State'
-    = select_tag :order_state, options_for_select(Order.order_states.keys.map { |key| [key.humanize, key] }, params[:order_state]), include_blank: true, class: 'form-control'
-  .form-group
-    = label_tag :start_date, 'Start Date'
-    = date_field_tag :start_date, params[:start_date], class: 'form-control'
+  .form-group.row
+    = label_tag :order_state, 'Order State', class: 'col-md-2 col-form-label'
+    .col-md-8
+      = select_tag :order_state, options_for_select(Order.order_states.keys.map { |key| [key.humanize, key] }, params[:order_state]), include_blank: true, class: 'form-control'
 
-  .form-group
-    = label_tag :end_date, 'End Date'
-    = date_field_tag :end_date, params[:end_date], class: 'form-control'
+  .form-group.row
+    = label_tag :start_date, 'Start Date', class: 'col-md-2 col-form-label'
+    .col-md-8
+      = date_field_tag :start_date, params[:start_date], class: 'form-control'
 
-  .form-group
-    = submit_tag 'Search', class: 'btn btn-primary'
+  .form-group.row
+    = label_tag :end_date, 'End Date', class: 'col-md-2 col-form-label'
+    .col-md-8
+      = date_field_tag :end_date, params[:end_date], class: 'form-control'
+
+  .form-group.row
+    .col-md-8.offset-md-4
+      = submit_tag 'Search', class: 'btn btn-primary'
 
 %table.table.table-striped
   %thead
