--- a/app/views/clientviews/index.html.haml
+++ b/app/views/clientviews/index.html.haml
@@ -1,4 +1,4 @@
-%h1 Listing clients
+%h1 Clients 
 
 %table.table.table-striped
   %thead
@@ -6,6 +6,7 @@
       %th Full name
       %th Address
       %th Email
+      %th Client State
       %th
       %th Actions
       %th
