--- a/app/views/stateviews/_form.html.haml
+++ b/app/views/stateviews/_form.html.haml
@@ -9,23 +9,23 @@
             - @state.errors.each do |error|
               %li= error.full_message
 
-  .form-group.mx-4
+  .form-group.text-center.mx-4.mb-3
     = f.label :ontime, class: "form-label required"
-    .div.w-25 
+    .div.w-25.mx-auto 
       = f.number_field :ontime, step: 1, autofocus: true, class: "form-control"
   
-  .form-group.mx-4
+  .form-group.text-center.mx-4.mb-3
     = f.label :overtime, class: "form-label required"
-    .div.w-25 
+    .div.w-25.mx-auto 
       = f.number_field :overtime, step: 1, autofocus: true, class: "form-control"
   
-  .form-group.mx-4
+  .form-group.text-center.mx-4.mb-5
     = f.label :late, class: "form-label required"
-    .div.w-25 
+    .div.w-25.mx-auto 
       = f.number_field :late, step: 1, autofocus: true, class: "form-control"
 
   .row.mt-4
-    .offset-3.col-3
-      = link_to 'back', stateviews_path, class: "btn btn-secondary btn-block"
-    .col-3
-      = button_tag 'save', class: "btn btn-outline-success btn-block"
+    .offset-3.col-3.text-center
+      = link_to 'Back', stateviews_path, class: "btn btn-secondary btn-block"
+    .col-3.text-center
+      = button_tag 'Save', class: "btn btn-outline-success btn-block"
