--- a/app/views/adminviews/edit.html.haml
+++ b/app/views/adminviews/edit.html.haml
@@ -1,3 +1,4 @@
-%h1 Editing Administrator
+%section.centered-section{ style: 'display: flex; flex-direction: column; align-items: center; text-align: center; margin-bottom: 40px;' }
+    %h1 Edit Manager
 
 = render 'formEdit'
