--- a/app/views/adminviews/new.html.haml
+++ b/app/views/adminviews/new.html.haml
@@ -1,3 +1,4 @@
-%h1 New Administrator
+%section.centered-section{ style: 'display: flex; flex-direction: column; align-items: center; text-align: center; margin-bottom: 40px;' }
+    %h1 New Manager
 
 = render 'form'
