--- a/app/views/chefviews/_form.html.haml
+++ b/app/views/chefviews/_form.html.haml
@@ -9,23 +9,23 @@
             - @chef.errors.each do |error|
               %li= error.full_message
 
-  .form-group.mx-4
+  .form-group.text-center.mx-4.mb-3
     = f.label :full_name, class: "form-label required"
-    .div.w-25 
+    .div.w-25.mx-auto 
       = f.text_field :full_name, autofocus: true, class: "form-control", required: true
     
-  .form-group.mx-4
+  .form-group.text-center.mx-4.mb-3
     = f.label :email, class: "form-label required"
-    .div.w-25 
+    .div.w-25.mx-auto 
       = f.email_field :email, autofocus: true, class: "form-control", required: true
 
-  .form-group.mx-4
+  .form-group.text-center.mx-4.mb-5
     = f.label :password, class: "form-label required"
-    .div.w-25 
+    .div.w-25.mx-auto 
       = f.password_field :password, autofocus: true, class: "form-control", required: true
 
   .row.mt-4
-    .offset-3.col-3
+    .offset-3.col-3.text-center
       = link_to 'back', chefviews_path, class: "btn btn-secondary btn-block"
-    .col-3
+    .col-3.text-center
       = button_tag 'save', class: "btn btn-outline-success btn-block"
