--- a/app/views/chefviews/show.html.haml
+++ b/app/views/chefviews/show.html.haml
@@ -1,15 +1,18 @@
 .notice
   %p#notice= notice
 
-%section
-  %h3 Full name:
+%section.centered-section{ style: 'display: flex; flex-direction: column; align-items: center; text-align: center;' }
+  %h1 Chef
+
+%section.centered-section{ style: 'display: flex; flex-direction: column; align-items: center; text-align: center; margin-top: 40px;' }
+  %h3 Full name
   %p= @chef.full_name
 
-%section
-  %h3 Email:
+%section.centered-section{ style: 'display: flex; flex-direction: column; align-items: center; text-align: center; margin-top: 20px;' }
+  %h3 Email
   %p= @chef.email
 
-%section.actions
+%section.centered-section{ style: 'display: flex; justify-content: center; align-items: center; margin-top: 40px;' }
   = link_to 'Back', chefviews_path, class: 'btn btn-secondary'
   |
-  = link_to 'Edit', edit_chefview_path(@chef), class: 'btn btn-primary'
+  = link_to 'Edit', edit_chefview_path(@chef), class: 'btn btn-success'
