--- a/app/views/clientviews/_form.html.haml
+++ b/app/views/clientviews/_form.html.haml
@@ -9,13 +9,13 @@
             - @client.errors.each do |error|
               %li= error.full_message
 
-  .form-group.mx-4
+  .form-group.text-center.mx-4.mb-5
     = f.label :client_state, class: "form-label required"
-    .div.w-25 
+    .div.w-25.mx-auto 
       = f.select(:client_state, options_for_select(client_states_helper, @client.client_state), {prompt: 'select'}, class: "form-control")
 
   .row.mt-4
-    .offset-3.col-3
-      = link_to 'back', clientviews_path, class: "btn btn-secondary btn-block"
-    .col-3
-      = button_tag 'save', class: "btn btn-outline-success btn-block"
+    .offset-3.col-3.text-center
+      = link_to 'Back', clientviews_path, class: "btn btn-secondary btn-block"
+    .col-3.text-center
+      = button_tag 'Save', class: "btn btn-outline-success btn-block"
