--- a/app/views/clientviews/show.html.haml
+++ b/app/views/clientviews/show.html.haml
@@ -1,21 +1,24 @@
 .notice
   %p#notice= notice
 
-%section
-  %h3 Full name:
+%section.centered-section{ style: 'display: flex; flex-direction: column; align-items: center; text-align: center;' }
+  %h1 Client
+
+%section.centered-section{ style: 'display: flex; flex-direction: column; align-items: center; text-align: center; margin-top: 40px;' }
+  %h3 Full name
   %p= @client.full_name
 
-%section
-  %h3 Address:
+%section.centered-section{ style: 'display: flex; flex-direction: column; align-items: center; text-align: center; margin-top: 20px;' }
+  %h3 Address
   %p= @client.address
 
-%section
-  %h3 Email:
+%section.centered-section{ style: 'display: flex; flex-direction: column; align-items: center; text-align: center; margin-top: 20px;' }
+  %h3 Email
   %p= @client.email
 
-%section
-  %h3 State:
+%section.centered-section{ style: 'display: flex; flex-direction: column; align-items: center; text-align: center; margin-top: 20px;' }
+  %h3 State
   %p= @client.client_state
 
-%section.actions
+%section.centered-section{ style: 'display: flex; flex-direction: column; align-items: center; text-align: center; margin-top: 40px;' }
   = link_to 'Back', clientviews_path, class: 'btn btn-secondary'
