--- a/app/views/dishviews/index.html.haml
+++ b/app/views/dishviews/index.html.haml
@@ -1,11 +1,11 @@
-%h1 Listing dishes
+%h1 Menu
 
 = form_tag dishviews_path, method: :get do
   .form-group.row
     .col-md-6
       = text_field_tag :search, params[:search], placeholder: 'Search by dish name or description', class: 'form-control'
     .col-md-6
-      = submit_tag 'Search', class: 'btn btn-primary'
+      = submit_tag 'Search', class: 'btn btn-dark'
 
 %table.table.table-striped
   %thead
@@ -26,9 +26,9 @@
         %td= dish.price
         %td= dish.dish_state
         %td= link_to 'Show', dishview_path(dish), class: 'btn btn-primary'
-        %td= link_to 'Edit', edit_dishview_path(dish), class: 'btn btn-primary'
+        %td= link_to 'Edit', edit_dishview_path(dish), class: 'btn btn-success'
         %td= button_to 'Delete', dishview_path(dish), method: :delete, class: "btn btn-danger"
 
 %br
 
-= link_to 'New Dish', new_dishview_path, class: 'btn btn-primary mr-2'
+= link_to 'New', new_dishview_path, class: 'btn btn-outline-success'
