--- a/app/views/dishviews/new.html.haml
+++ b/app/views/dishviews/new.html.haml
@@ -1,4 +1,5 @@
-%h1 New dish
+%section.centered-section{ style: 'display: flex; flex-direction: column; align-items: center; text-align: center; margin-bottom: 40px;' }
+    %h1 New Dish
 
 = render 'form'
 
