--- a/app/views/dishviews/show.html.haml
+++ b/app/views/dishviews/show.html.haml
@@ -1,21 +1,24 @@
 .notice
   %p#notice= notice
 
-%section
-  %h3 Dish name:
+%section.centered-section{ style: 'display: flex; flex-direction: column; align-items: center; text-align: center;' }
+  %h1 Dish
+
+%section.centered-section{ style: 'display: flex; flex-direction: column; align-items: center; text-align: center; margin-top: 40px;' }
+  %h3 Dish name
   %p= @dish.dish_name
 
-%section
-  %h3 Description:
+%section.centered-section{ style: 'display: flex; flex-direction: column; align-items: center; text-align: center; margin-top: 20px;' }
+  %h3 Description
   %p= @dish.description
 
-%section
-  %h3 Price:
+%section.centered-section{ style: 'display: flex; flex-direction: column; align-items: center; text-align: center; margin-top: 20px;' }
+  %h3 Price
   %p= @dish.price
 
-%section.actions
+%section.centered-section{ style: 'display: flex; justify-content: center; align-items: center; margin-top: 40px;' }
   = link_to 'Back', dishviews_path, class: 'btn btn-secondary'
   |
-  = link_to 'Edit', edit_dishview_path(@dish), class: 'btn btn-primary'
+  = link_to 'Edit', edit_dishview_path(@dish), class: 'btn btn-success'
   
 
