--- a/app/views/orderviews/edit.html.haml
+++ b/app/views/orderviews/edit.html.haml
@@ -1,3 +1,4 @@
-%h1 Editing order
+%section.centered-section{ style: 'display: flex; flex-direction: column; align-items: center; text-align: center; margin-bottom: 40px;' }
+    %h1 Edit Order
 
 = render 'form'
