--- a/app/views/orderviews/index.html.haml
+++ b/app/views/orderviews/index.html.haml
@@ -1,4 +1,5 @@
-%h1 Listing orders
+%section.centered-section{ style: 'display: flex; flex-direction: column; margin-bottom: 40px;' }
+  %h1 Orders
 
 %h2 Search
 = form_tag orderviews_path, method: :get do
@@ -24,7 +25,7 @@
 
   .form-group.row
     .col-md-8.offset-md-4
-      = submit_tag 'Search', class: 'btn btn-primary'
+      = submit_tag 'Search', class: 'btn btn-dark'
 
 %table.table.table-striped
   %thead
