Fixed error in manager update

--- a/app/views/chefviews/_form.html.haml
+++ b/app/views/chefviews/_form.html.haml
@@ -26,6 +26,6 @@
 
   .row.mt-4
     .offset-3.col-3.text-center
-      = link_to 'back', chefviews_path, class: "btn btn-secondary btn-block"
+      = link_to 'Back', chefviews_path, class: "btn btn-secondary btn-block"
     .col-3.text-center
-      = button_tag 'save', class: "btn btn-outline-success btn-block"
+      = button_tag 'Save', class: "btn btn-outline-success btn-block"
