--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -4,18 +4,18 @@
       :css
         .centered-image {
           display: flex;
-          justify-content: center; /* Centra horizontalmente */
-          align-items: center; /* Centra verticalmente */
-          height: 100vh;
+          justify-content: center;
+          align-items: center; 
+          height: 200vh;
         }
         .centered-image .content {
-          text-align: left; /* Alinea el contenido a la izquierda */
+          text-align: left; 
           padding: 20px;
         }
         .centered-image img {
           max-width: 70%;
-          max-height: 70%; /* Ajusta la altura máxima de la imagen */
-          padding: 20px; /* Ajusta el espacio alrededor de la imagen */
+          max-height: 70%;
+          padding: 20px; 
         }
         
   %body
