--- a/app/views/adminviews/_formEdit.html.haml
+++ b/app/views/adminviews/_formEdit.html.haml
@@ -1,4 +1,4 @@
-= form_for @admin, url: url_for(controller: 'admins/registrations', action: 'update'), method: :patch do |f|
+= form_for @admin, url: adminview_path(@admin), method: :patch do |f|
   - if @admin.errors.any?
     .card.mx-4
       .card-body
@@ -18,16 +18,6 @@
     = f.label :email, class: "form-label required"
     .div.w-25.mx-auto 
       = f.email_field :email, autofocus: true, class: "form-control", required: true
-
-  .form-group.text-center.mx-4.mb-3
-    = f.label :password, class: "form-label required"
-    .div.w-25.mx-auto 
-      = f.password_field :password, autofocus: true, class: "form-control", required: true
-
-  .form-group.text-center.mx-4.mb-5
-    = f.label :password_confirmation, class: "form-label required"
-    .div.w-25.mx-auto
-      = f.password_field :password_confirmation, autofocus: true, class: "form-control", required: true
 
   .row.mt-4
     .offset-3.col-3.text-center
