--- a/app/views/orderviews/show.html.haml
+++ b/app/views/orderviews/show.html.haml
@@ -2,7 +2,7 @@
   %p#notice= notice
 
 %section.centered-section{ style: 'display: flex; flex-direction: column; align-items: center; text-align: center;' }
-  %h1 Client
+  %h1 Order
 
 %section.centered-section{ style: 'display: flex; flex-direction: column; align-items: center; text-align: center; margin-top: 40px;' }
   %h3 Full Name
