--- a/app/views/chefviews/_form.html.haml
+++ b/app/views/chefviews/_form.html.haml
@@ -4,7 +4,7 @@
       .card-body
         %div{style: 'color: red'}
           %h2
-            =t('application.can_not_be_saved')#Falta traduccion
+            = 'Could not save chef'
           %ul
             - @chef.errors.each do |error|
               %li= error.full_message
