--- a/app/views/dishviews/_form.html.haml
+++ b/app/views/dishviews/_form.html.haml
@@ -4,7 +4,7 @@
       .card-body
         %div{style: 'color: red'}
           %h2
-            =t('application.can_not_be_saved')#Falta traduccion
+            = 'Could not save dish'
           %ul
             - @dish.errors.each do |error|
               %li= error.full_message
@@ -22,7 +22,7 @@
   .form-group.text-center.mx-4.mb-3
     = f.label :price, class: "form-label required"
     .div.w-25.mx-auto 
-      = f.text_field :price, autofocus: true, class: "form-control", required: true
+      = f.number_field :price, step: "0.1", min: "0", autofocus: true, class: "form-control", required: true
 
   .form-group.text-center.mx-4.mb-3
     = f.label :image, class: "form-label required"
